@@ -7,6 +7,7 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -15,8 +16,9 @@ import org.sentrysoftware.metricshub.engine.connector.model.common.EmbeddedFile;
 
 class EmbeddedFileHelperTest {
 
-	private static final String FILE_PATH = "src/test/resources/test-files/embedded/connector1/header.txt";
-	private static final String EMBEDDED_FILE_HEADER_REF = String.format("${file::%s}", FILE_PATH);
+	private static final String FILE_REF_FORMAT = "${file::%s}";
+	private static final Path FILE_PATH = Paths.get("src/test/resources/test-files/embedded/connector1/header.txt");
+	private static final String EMBEDDED_FILE_HEADER_REF = String.format(FILE_REF_FORMAT, FILE_PATH.toUri().toString());
 
 	@Test
 	void testFindEmbeddedFiles() throws IOException {
@@ -27,7 +29,7 @@ class EmbeddedFileHelperTest {
 		final Map<String, EmbeddedFile> expected = Map.of(
 			EMBEDDED_FILE_HEADER_REF,
 			new EmbeddedFile(
-				Files.readAllLines(Path.of(FILE_PATH)).stream().collect(Collectors.joining("\n")),
+				Files.readAllLines(FILE_PATH).stream().collect(Collectors.joining("\n")),
 				"txt",
 				EMBEDDED_FILE_HEADER_REF
 			)
@@ -38,7 +40,7 @@ class EmbeddedFileHelperTest {
 
 	@Test
 	void testFindEmbeddedFilesErrorOnFileNotFound() throws IOException {
-		assertThrows(IOException.class, () -> EmbeddedFileHelper.findEmbeddedFiles("${file::notFound}"));
+		assertThrows(IOException.class, () -> EmbeddedFileHelper.findEmbeddedFiles("${file::file:///notFound}"));
 	}
 
 	@Test
@@ -57,7 +59,26 @@ class EmbeddedFileHelperTest {
 	}
 
 	@Test
-	void testParseEmbeddedFileFailsOnFileNotFound() {
-		assertThrows(IOException.class, () -> EmbeddedFileHelper.parseEmbeddedFile(Path.of("notpresent")));
+	void testFindEmbeddedFilesInZip() throws IOException {
+		final String absolutePath = Paths.get("src/test/resources").toAbsolutePath().toString().replace("\\", "/");
+		final String uriStr = String.format(
+			"jar:file:///%s/test-files/connector/zippedConnector/connectors/connectors.zip!/hardware/DiskPart/listVolume.txt",
+			absolutePath
+		);
+		final String awkInZipRef = String.format(FILE_REF_FORMAT, uriStr);
+		final Map<String, EmbeddedFile> result = EmbeddedFileHelper.findEmbeddedFiles(awkInZipRef);
+
+		final Map<String, EmbeddedFile> expected = Map.of(
+			awkInZipRef,
+			new EmbeddedFile(
+				"""
+				list volume
+				exit""",
+				"txt",
+				awkInZipRef
+			)
+		);
+
+		assertEquals(expected, result);
 	}
 }
